test/errors/type/math/clamp3.yasl
math.clamp(.s, 1, 2)
